--- a/config/install/field.storage.task_assignment.field_submission_date.yml
+++ b/config/install/field.storage.task_assignment.field_submission_date.yml
@@ -1,15 +1,17 @@
-uuid: 1640081e-aecb-4fba-bbb3-cb72801d2dec
+uuid: 7fae8285-08e3-46de-9194-7f786ab0a161
 langcode: en
 status: true
 dependencies:
   module:
+    - datetime
     - social_task_assignment
 id: task_assignment.field_submission_date
 field_name: field_submission_date
 entity_type: task_assignment
-type: timestamp
-settings: {  }
-module: core
+type: datetime
+settings:
+  datetime_type: datetime
+module: datetime
 locked: false
 cardinality: 1
 translatable: true
