--- a/config/install/views.view.manage_all_task_assignments.yml
+++ b/config/install/views.view.manage_all_task_assignments.yml
@@ -4,15 +4,18 @@ status: true
 dependencies:
   config:
     - core.entity_view_mode.profile.table
+    - field.storage.task_assignment.field_feedback
     - field.storage.task_assignment.field_status
     - field.storage.task_assignment.field_submission_date
   module:
+    - datetime
     - node
     - options
     - profile
     - social_group
     - social_profile
     - social_task_assignment
+    - text
     - user
 id: manage_all_task_assignments
 label: 'Manage All Task Assignments'
@@ -84,8 +87,9 @@ display:
           columns:
             profile_entity_sortable: profile_entity_sortable
             field_status: field_status
+            field_feedback: field_feedback
             field_submission_date: field_submission_date
-            field_task_1: field_task_1
+            id: id
           info:
             profile_entity_sortable:
               sortable: true
@@ -101,6 +105,13 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
+            field_feedback:
+              sortable: false
+              default_sort_order: asc
+              align: ''
+              separator: ''
+              empty_column: false
+              responsive: ''
             field_submission_date:
               sortable: true
               default_sort_order: asc
@@ -108,7 +119,7 @@ display:
               separator: ''
               empty_column: false
               responsive: ''
-            field_task_1:
+            id:
               sortable: false
               default_sort_order: asc
               align: ''
@@ -233,6 +244,68 @@ display:
           separator: ', '
           field_api_classes: false
           plugin_id: field
+        field_feedback:
+          id: field_feedback
+          table: task_assignment__field_feedback
+          field: field_feedback
+          relationship: none
+          group_type: group
+          admin_label: ''
+          label: ''
+          exclude: false
+          alter:
+            alter_text: false
+            text: ''
+            make_link: false
+            path: ''
+            absolute: false
+            external: false
+            replace_spaces: false
+            path_case: none
+            trim_whitespace: false
+            alt: ''
+            rel: ''
+            link_class: ''
+            prefix: ''
+            suffix: ''
+            target: ''
+            nl2br: false
+            max_length: 0
+            word_boundary: true
+            ellipsis: true
+            more_link: false
+            more_link_text: ''
+            more_link_path: ''
+            strip_tags: false
+            trim: false
+            preserve_tags: ''
+            html: false
+          element_type: ''
+          element_class: ''
+          element_label_type: ''
+          element_label_class: ''
+          element_label_colon: false
+          element_wrapper_type: ''
+          element_wrapper_class: ''
+          element_default_classes: true
+          empty: ''
+          hide_empty: false
+          empty_zero: false
+          hide_alter_empty: true
+          click_sort_column: value
+          type: text_default
+          settings: {  }
+          group_column: value
+          group_columns: {  }
+          group_rows: true
+          delta_limit: 0
+          delta_offset: 0
+          delta_reversed: false
+          delta_first_last: false
+          multi_type: separator
+          separator: ', '
+          field_api_classes: false
+          plugin_id: field
         field_submission_date:
           id: field_submission_date
           table: task_assignment__field_submission_date
@@ -282,11 +355,10 @@ display:
           empty_zero: false
           hide_alter_empty: true
           click_sort_column: value
-          type: timestamp
+          type: datetime_default
           settings:
-            date_format: medium
-            custom_date_format: ''
-            timezone: ''
+            timezone_override: ''
+            format_type: medium
           group_column: value
           group_columns: {  }
           group_rows: true
@@ -508,6 +580,7 @@ display:
         - 'config:core.entity_view_display.profile.profile.statistic'
         - 'config:core.entity_view_display.profile.profile.table'
         - 'config:core.entity_view_display.profile.profile.teaser'
+        - 'config:field.storage.task_assignment.field_feedback'
         - 'config:field.storage.task_assignment.field_status'
         - 'config:field.storage.task_assignment.field_submission_date'
         - 'config:social_tagging.settings'
@@ -550,6 +623,7 @@ display:
         - 'config:core.entity_view_display.profile.profile.statistic'
         - 'config:core.entity_view_display.profile.profile.table'
         - 'config:core.entity_view_display.profile.profile.teaser'
+        - 'config:field.storage.task_assignment.field_feedback'
         - 'config:field.storage.task_assignment.field_status'
         - 'config:field.storage.task_assignment.field_submission_date'
         - 'config:social_tagging.settings'
