--- a/config/install/core.entity_form_display.node.task.default.yml
+++ b/config/install/core.entity_form_display.node.task.default.yml
@@ -8,10 +8,59 @@ dependencies:
     - field.field.node.task.field_webform
     - node.type.task
   module:
+    - field_group
     - path
     - social_group
     - text
     - webform
+third_party_settings:
+  field_group:
+    group_basic_information:
+      children:
+        - title
+        - body
+        - field_webform
+      parent_name: ''
+      weight: 0
+      format_type: fieldset
+      region: content
+      format_settings:
+        description: ''
+        required_fields: true
+        id: content
+        classes: card
+      label: 'Basic information'
+    group_access_permissions:
+      children:
+        - groups
+        - field_content_visibility
+      parent_name: ''
+      weight: 2
+      format_type: fieldset
+      region: content
+      format_settings:
+        description: ''
+        required_fields: true
+        id: visibility
+        classes: card
+      label: 'Access permissions'
+    group_additional_information:
+      children:
+        - status
+        - uid
+        - created
+        - path
+        - url_redirects
+      parent_name: ''
+      weight: 1
+      format_type: fieldset
+      region: content
+      format_settings:
+        description: ''
+        required_fields: true
+        id: ''
+        classes: card
+      label: 'Additional information'
 _core:
   default_config_hash: 0PHfxERgOcHy8ov16EkksOYS_K92CfvVMbiQlb7UwyM
 id: node.task.default
@@ -21,7 +70,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 121
+    weight: 11
     settings:
       rows: 9
       summary_rows: 3
@@ -31,66 +80,46 @@ content:
     region: content
   created:
     type: datetime_timestamp
-    weight: 10
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
   field_content_visibility:
-    weight: 123
+    type: options_buttons
+    weight: 6
+    region: content
     settings: {  }
     third_party_settings: {  }
-    type: options_buttons
-    region: content
   field_webform:
-    weight: 122
+    type: webform_entity_reference_select
+    weight: 12
+    region: content
     settings:
       default_data: true
       webforms: {  }
     third_party_settings: {  }
-    type: webform_entity_reference_select
-    region: content
   groups:
     type: social_group_selector_widget
-    settings: {  }
-    weight: 16
+    weight: 5
     region: content
+    settings: {  }
     third_party_settings: {  }
   path:
     type: path
-    weight: 30
+    weight: 8
     region: content
     settings: {  }
-    third_party_settings: {  }
-  promote:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 15
-    region: content
-    third_party_settings: {  }
-  social_tagging:
-    type: options_select
-    weight: 3
-    settings: {  }
-    region: content
     third_party_settings: {  }
   status:
     type: boolean_checkbox
+    weight: 5
+    region: content
     settings:
       display_label: true
-    weight: 120
-    region: content
-    third_party_settings: {  }
-  sticky:
-    type: boolean_checkbox
-    settings:
-      display_label: true
-    weight: 16
-    region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: -5
+    weight: 10
     region: content
     settings:
       size: 60
@@ -98,17 +127,20 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 5
+    weight: 6
+    region: content
     settings:
       match_operator: CONTAINS
+      match_limit: 10
       size: 60
       placeholder: ''
-      match_limit: 10
-    region: content
     third_party_settings: {  }
   url_redirects:
-    weight: 50
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
-hidden: {  }
+hidden:
+  promote: true
+  social_tagging: true
+  sticky: true
