--- a/config/install/core.entity_view_display.task_assignment.task_assignment.default.yml
+++ b/config/install/core.entity_view_display.task_assignment.task_assignment.default.yml
@@ -8,11 +8,12 @@ dependencies:
     - field.field.task_assignment.task_assignment.field_feedback
     - field.field.task_assignment.task_assignment.field_status
     - field.field.task_assignment.task_assignment.field_submission_date
-    - field.field.task_assignment.task_assignment.field_submissions
     - field.field.task_assignment.task_assignment.field_task
     - field.field.task_assignment.task_assignment.field_webform_submissions
   module:
+    - datetime
     - social_task_assignment
+    - text
 id: task_assignment.task_assignment.default
 targetEntityType: task_assignment
 bundle: task_assignment
@@ -23,17 +24,16 @@ content:
     label: above
     settings: {  }
     third_party_settings: {  }
-    type: basic_string
+    type: text_default
     region: content
   field_submission_date:
-    weight: 0
+    weight: 3
     label: above
     settings:
-      date_format: medium
-      custom_date_format: ''
-      timezone: ''
+      format_type: medium
+      timezone_override: ''
     third_party_settings: {  }
-    type: timestamp
+    type: datetime_default
     region: content
   field_webform_submissions:
     weight: 1
@@ -48,7 +48,6 @@ hidden:
   field_account: true
   field_due_date: true
   field_status: true
-  field_submissions: true
   field_task: true
   name: true
   search_api_excerpt: true
