--- a/config/install/core.entity_form_mode.task_assignment.feedback.yml
+++ b/config/install/core.entity_form_mode.task_assignment.feedback.yml
@@ -1,9 +1,10 @@
-uuid: 916d1ed4-3742-49d2-b8ed-7459f0286d01
 langcode: en
 status: true
 dependencies:
   module:
     - social_task_assignment
+_core:
+  default_config_hash: '-7NjeM8SX8ODzt0XQnW1L-b7tggP7VT0gMM13NprSTg'
 id: task_assignment.feedback
 label: feedback
 targetEntityType: task_assignment
