--- a/config/install/field.field.node.task.field_webform.yml
+++ b/config/install/field.field.node.task.field_webform.yml
@@ -1,4 +1,3 @@
-uuid: e1b558af-1e93-4d2c-b985-41387b37d8c0
 langcode: en
 status: true
 dependencies:
@@ -8,8 +7,6 @@ dependencies:
     - webform.webform.default
   module:
     - webform
-_core:
-  default_config_hash: ySr4RKqEVVrCTQmzh6l0cr1Hp8y7SkwN1qnzER9RXqU
 id: node.task.field_webform
 field_name: field_webform
 entity_type: node
@@ -17,7 +14,7 @@ bundle: task
 label: Webform
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value:
   -
     default_data: ''
