--- a/config/install/block.block.views_block__task_feedback_block_1.yml
+++ b/config/install/block.block.views_block__task_feedback_block_1.yml
@@ -1,4 +1,3 @@
-uuid: 36f02ae2-093d-4a47-9e8b-888c728ee47f
 langcode: en
 status: true
 dependencies:
@@ -9,17 +8,19 @@ dependencies:
     - views
   theme:
     - socialblue
+_core:
+  default_config_hash: Ayq2CCz0Ttn2tzFMQ655AXJpu0DhqeREuz-cnc2jEE0
 id: views_block__task_feedback_block_1
 theme: socialblue
 region: content
-weight: 0
+weight: -22
 provider: null
 plugin: 'views_block:task_feedback-block_1'
 settings:
   id: 'views_block:task_feedback-block_1'
   label: ''
   provider: views
-  label_display: visible
+  label_display: '0'
   views_label: ''
   items_per_page: none
   type: none
