--- a/config/install/core.entity_form_display.task_assignment.task_assignment.default.yml
+++ b/config/install/core.entity_form_display.task_assignment.task_assignment.default.yml
@@ -1,4 +1,3 @@
-uuid: ca67acdf-74e1-47d0-b45f-30c6107aeaca
 langcode: en
 status: true
 dependencies:
@@ -9,72 +8,48 @@ dependencies:
     - field.field.task_assignment.task_assignment.field_status
     - field.field.task_assignment.task_assignment.field_submission_date
     - field.field.task_assignment.task_assignment.field_task
+    - field.field.task_assignment.task_assignment.field_upload
     - field.field.task_assignment.task_assignment.field_webform_submissions
   module:
     - datetime
+    - social_group
     - social_task_assignment
-    - text
 id: task_assignment.task_assignment.default
 targetEntityType: task_assignment
 bundle: task_assignment
 mode: default
 content:
   field_account:
-    weight: 3
+    type: entity_reference_autocomplete
+    weight: 1
+    region: content
     settings:
       match_operator: CONTAINS
       match_limit: 10
       size: 60
       placeholder: ''
     third_party_settings: {  }
-    type: entity_reference_autocomplete
-    region: content
   field_due_date:
-    weight: 7
-    settings: {  }
-    third_party_settings: {  }
     type: datetime_default
-    region: content
-  field_feedback:
-    weight: 10
-    settings:
-      rows: 5
-      placeholder: ''
-    third_party_settings: {  }
-    type: text_textarea
-    region: content
-  field_submission_date:
-    weight: 11
-    settings: {  }
-    third_party_settings: {  }
-    type: datetime_default
-    region: content
-  field_task:
-    weight: 4
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
-    region: content
-  field_webform_submissions:
-    weight: 8
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
-    type: entity_reference_autocomplete
-    region: content
-  langcode:
-    type: language_select
     weight: 2
     region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_status:
+    type: social_group_selector_widget
+    weight: 3
+    region: content
+    settings: {  }
+    third_party_settings: {  }
+  field_webform_submissions:
+    type: entity_reference_autocomplete
+    weight: 4
+    region: content
     settings:
-      include_locked: true
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
   name:
     type: string_textfield
@@ -84,15 +59,10 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  user_id:
-    type: entity_reference_autocomplete
-    weight: 1
-    settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
-      match_limit: 10
-    region: content
-    third_party_settings: {  }
 hidden:
-  field_status: true
+  field_feedback: true
+  field_submission_date: true
+  field_task: true
+  field_upload: true
+  langcode: true
+  user_id: true
