--- a/config/install/core.entity_view_display.node.task.task_submission.yml
+++ b/config/install/core.entity_view_display.node.task.task_submission.yml
@@ -1,4 +1,3 @@
-uuid: fbb75e0d-8d8b-428e-98fd-a8487de61e55
 langcode: en
 status: true
 dependencies:
@@ -11,21 +10,19 @@ dependencies:
   module:
     - user
     - webform
-_core:
-  default_config_hash: yfE28n1e2VRL2MRbFhBnI9-4DVIYrpvlo9Z9Hu42yKQ
 id: node.task.task_submission
 targetEntityType: node
 bundle: task
 mode: task_submission
 content:
   field_webform:
-    weight: 9
+    type: webform_entity_reference_entity_view
+    weight: 5
+    region: content
     label: hidden
     settings:
       source_entity: true
     third_party_settings: {  }
-    type: webform_entity_reference_entity_view
-    region: content
   groups_type_closed_group:
     label: above
     weight: 0
@@ -42,7 +39,7 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
-  groups_type_fsadfdasf:
+  groups_type_open_group:
     label: above
     weight: 2
     region: content
@@ -50,7 +47,7 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
-  groups_type_open_group:
+  groups_type_public_group:
     label: above
     weight: 3
     region: content
@@ -58,41 +55,9 @@ content:
       link: true
     third_party_settings: {  }
     type: entity_reference_label
-  groups_type_public_group:
-    label: above
-    weight: 4
-    region: content
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
   groups_type_secret_group:
     label: above
-    weight: 5
-    region: content
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-  groups_type_super:
-    label: above
-    weight: 6
-    region: content
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-  groups_type_tm_community:
-    label: above
-    weight: 7
-    region: content
-    settings:
-      link: true
-    third_party_settings: {  }
-    type: entity_reference_label
-  groups_type_tm_training:
-    label: above
-    weight: 8
+    weight: 4
     region: content
     settings:
       link: true
@@ -104,5 +69,6 @@ hidden:
   flag_follow_content: true
   groups: true
   links: true
+  private_message_link: true
   search_api_excerpt: true
   social_tagging: true
