--- a/config/install/core.entity_view_display.task_assignment.task_assignment.default.yml
+++ b/config/install/core.entity_view_display.task_assignment.task_assignment.default.yml
@@ -1,4 +1,3 @@
-uuid: 1dfa5eaf-8966-4dc2-80eb-1445339c2bf9
 langcode: en
 status: true
 dependencies:
@@ -9,46 +8,56 @@ dependencies:
     - field.field.task_assignment.task_assignment.field_status
     - field.field.task_assignment.task_assignment.field_submission_date
     - field.field.task_assignment.task_assignment.field_task
+    - field.field.task_assignment.task_assignment.field_upload
     - field.field.task_assignment.task_assignment.field_webform_submissions
   module:
     - datetime
     - social_task_assignment
-    - text
 id: task_assignment.task_assignment.default
 targetEntityType: task_assignment
 bundle: task_assignment
 mode: default
 content:
-  field_feedback:
-    weight: 2
-    label: above
-    settings: {  }
-    third_party_settings: {  }
-    type: text_default
+  field_account:
+    type: entity_reference_label
+    weight: 0
     region: content
-  field_submission_date:
-    weight: 3
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+  field_due_date:
+    type: datetime_default
+    weight: 1
+    region: content
     label: above
     settings:
       format_type: medium
       timezone_override: ''
     third_party_settings: {  }
+  field_submission_date:
     type: datetime_default
+    weight: 2
     region: content
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
   field_webform_submissions:
-    weight: 1
+    type: entity_reference_entity_view
+    weight: 3
+    region: content
     label: above
     settings:
       view_mode: default
       link: false
     third_party_settings: {  }
-    type: entity_reference_entity_view
-    region: content
 hidden:
-  field_account: true
-  field_due_date: true
+  field_feedback: true
   field_status: true
   field_task: true
+  field_upload: true
   name: true
   search_api_excerpt: true
   user_id: true
