--- a/config/install/field.field.task_assignment.task_assignment.field_task.yml
+++ b/config/install/field.field.task_assignment.task_assignment.field_task.yml
@@ -1,4 +1,3 @@
-uuid: 0e2a9294-2d02-4ced-b520-41ff8a4c61c6
 langcode: en
 status: true
 dependencies:
@@ -7,6 +6,8 @@ dependencies:
     - node.type.task
   module:
     - social_task_assignment
+_core:
+  default_config_hash: RrxLcIstVM-gbTA6pYWIdj11LF17dwlhhMwwaA43JJc
 id: task_assignment.task_assignment.field_task
 field_name: field_task
 entity_type: task_assignment
