--- a/config/install/field.field.task_assignment.task_assignment.field_webform_submissions.yml
+++ b/config/install/field.field.task_assignment.task_assignment.field_webform_submissions.yml
@@ -1,4 +1,3 @@
-uuid: 9c9e4817-d130-4fdc-9ea4-449b74c7c098
 langcode: en
 status: true
 dependencies:
@@ -11,10 +10,10 @@ id: task_assignment.task_assignment.field_webform_submissions
 field_name: field_webform_submissions
 entity_type: task_assignment
 bundle: task_assignment
-label: 'Webform Submissions'
+label: 'Webform submissions'
 description: ''
 required: false
-translatable: false
+translatable: true
 default_value: {  }
 default_value_callback: ''
 settings:
