--- a/config/install/field.storage.node.field_webform.yml
+++ b/config/install/field.storage.node.field_webform.yml
@@ -1,10 +1,11 @@
-uuid: 47444640-68a4-4265-852d-c84719fa1da9
 langcode: en
 status: true
 dependencies:
   module:
     - node
     - webform
+_core:
+  default_config_hash: BUoPDNQOfDnQmHlRnX-SVodaSidLdgGmdY7A_ewiIh8
 id: node.field_webform
 field_name: field_webform
 entity_type: node
