--- a/config/install/field.storage.task_assignment.field_feedback.yml
+++ b/config/install/field.storage.task_assignment.field_feedback.yml
@@ -1,10 +1,11 @@
-uuid: a716133d-4060-47c3-bdbc-d84b0b917d3a
 langcode: en
 status: true
 dependencies:
   module:
     - social_task_assignment
     - text
+_core:
+  default_config_hash: 0VG_LwgVbuU1HuEBwCnCkDcPuzCv82rjw5_gsxIOK3Q
 id: task_assignment.field_feedback
 field_name: field_feedback
 entity_type: task_assignment
