--- a/config/install/field.storage.task_assignment.field_status.yml
+++ b/config/install/field.storage.task_assignment.field_status.yml
@@ -1,10 +1,11 @@
-uuid: db965ad9-053f-44a6-b164-054d185fd8a0
 langcode: en
 status: true
 dependencies:
   module:
     - options
     - social_task_assignment
+_core:
+  default_config_hash: 5TDuu7z9N5BPUN5qgatIE4BgVUbCw6VgaDPxdjCunW4
 id: task_assignment.field_status
 field_name: field_status
 entity_type: task_assignment
