--- a/config/install/social_task_assignment.settings.yml
+++ b/config/install/social_task_assignment.settings.yml
@@ -1,3 +1,3 @@
 group_member_sync: false
 _core:
-  default_config_hash: '-p2Qmdln8OkCe7r5h6NQbWag1at-Wm8ldmX03ZexpTY'
+  default_config_hash: ecO80CTEO-BXAHSV6GQu0N2cTXG3aHdfXWKRLnRdivI
