--- a/config/install/views.view.attached_webform_submissions.yml
+++ b/config/install/views.view.attached_webform_submissions.yml
@@ -1,24 +1,16 @@
 langcode: en
 status: true
 dependencies:
-  config:
-    - field.storage.task_assignment.field_feedback
-    - field.storage.task_assignment.field_upload
   module:
-    - file
-    - node
-    - social_task_assignment
-    - text
     - user
-_core:
-  default_config_hash: 465id3F26xYKgg-jD3z5cOsRpy7qnVWPE41rZ62h9_Q
-id: task_feedback
-label: task_feedback
+    - webform
+id: attached_webform_submissions
+label: 'Attached Webform Submissions'
 module: views
 description: ''
 tag: ''
-base_table: task_assignment_field_data
-base_field: id
+base_table: webform_submission
+base_field: sid
 display:
   default:
     display_plugin: default
@@ -29,7 +21,7 @@ display:
       access:
         type: perm
         options:
-          perm: 'access content'
+          perm: 'view own webform submission'
       cache:
         type: tag
         options: {  }
@@ -52,18 +44,28 @@ display:
           sort_asc_label: Asc
           sort_desc_label: Desc
       pager:
-        type: none
+        type: some
         options:
+          items_per_page: 5
           offset: 0
       style:
         type: default
+        options:
+          row_class: ''
+          default_row_class: true
+          uses_fields: false
       row:
         type: fields
+        options:
+          default_field_elements: true
+          inline: {  }
+          separator: ''
+          hide_empty: false
       fields:
-        field_feedback:
-          id: field_feedback
-          table: task_assignment__field_feedback
-          field: field_feedback
+        rendered_entity:
+          id: rendered_entity
+          table: webform_submission
+          field: rendered_entity
           relationship: none
           group_type: group
           admin_label: ''
@@ -108,140 +110,21 @@ display:
           hide_empty: false
           empty_zero: false
           hide_alter_empty: true
-          click_sort_column: value
-          type: text_default
-          settings: {  }
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
-        field_upload:
-          id: field_upload
-          table: task_assignment__field_upload
-          field: field_upload
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: target_id
-          type: file_default
-          settings:
-            use_description_as_link_text: true
-          group_column: ''
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          plugin_id: field
+          view_mode: default
+          entity_type: webform_submission
+          plugin_id: rendered_entity
       filters: {  }
       sorts: {  }
-      title: Feedback
+      title: Submissions
       header: {  }
       footer: {  }
       empty: {  }
-      relationships:
-        field_task:
-          id: field_task
-          table: task_assignment__field_task
-          field: field_task
-          relationship: none
-          group_type: group
-          admin_label: 'field_task: Content'
-          required: true
-          plugin_id: standard
+      relationships: {  }
       arguments:
-        nid:
-          id: nid
-          table: node_field_data
-          field: nid
-          relationship: field_task
-          group_type: group
-          admin_label: ''
-          default_action: default
-          exception:
-            value: all
-            title_enable: false
-            title: All
-          title_enable: false
-          title: ''
-          default_argument_type: node
-          default_argument_options: {  }
-          default_argument_skip_url: false
-          summary_options:
-            base_path: ''
-            count: true
-            items_per_page: 25
-            override: false
-          summary:
-            sort_order: asc
-            number_of_records: 0
-            format: default_summary
-          specify_validation: false
-          validate:
-            type: none
-            fail: 'not found'
-          validate_options: {  }
-          break_phrase: false
-          not: false
-          entity_type: node
-          entity_field: nid
-          plugin_id: node_nid
-        user_id:
-          id: user_id
-          table: task_assignment_field_data
-          field: user_id
+        uid:
+          id: uid
+          table: webform_submission
+          field: uid
           relationship: none
           group_type: group
           admin_label: ''
@@ -271,22 +154,59 @@ display:
           validate_options: {  }
           break_phrase: false
           not: false
-          entity_type: task_assignment
-          entity_field: user_id
+          entity_type: webform_submission
+          entity_field: uid
           plugin_id: numeric
+        entity_id:
+          id: entity_id
+          table: webform_submission
+          field: entity_id
+          relationship: none
+          group_type: group
+          admin_label: ''
+          default_action: default
+          exception:
+            value: all
+            title_enable: false
+            title: All
+          title_enable: false
+          title: ''
+          default_argument_type: node
+          default_argument_options: {  }
+          default_argument_skip_url: false
+          summary_options:
+            base_path: ''
+            count: true
+            items_per_page: 25
+            override: false
+          summary:
+            sort_order: asc
+            number_of_records: 0
+            format: default_summary
+          specify_validation: false
+          validate:
+            type: none
+            fail: 'not found'
+          validate_options: {  }
+          glossary: false
+          limit: 0
+          case: none
+          path_case: none
+          transform_dash: false
+          break_phrase: false
+          entity_type: webform_submission
+          entity_field: entity_id
+          plugin_id: string
       display_extenders: {  }
-      css_class: 'card card__block'
+      css_class: 'card__block card'
     cache_metadata:
       max-age: -1
       contexts:
-        - 'languages:language_content'
         - 'languages:language_interface'
         - url
         - user
         - user.permissions
-      tags:
-        - 'config:field.storage.task_assignment.field_feedback'
-        - 'config:field.storage.task_assignment.field_upload'
+      tags: {  }
   block_1:
     display_plugin: block
     id: block_1
@@ -298,11 +218,8 @@ display:
     cache_metadata:
       max-age: -1
       contexts:
-        - 'languages:language_content'
         - 'languages:language_interface'
         - url
         - user
         - user.permissions
-      tags:
-        - 'config:field.storage.task_assignment.field_feedback'
-        - 'config:field.storage.task_assignment.field_upload'
+      tags: {  }
