--- a/config/install/webform.webform.default.yml
+++ b/config/install/webform.webform.default.yml
@@ -1,9 +1,10 @@
-uuid: cc72934e-3d03-4c08-b6dc-9c83e3587510
 langcode: en
 status: open
 dependencies:
   module:
     - social_task_assignment
+_core:
+  default_config_hash: HpzOzOux3p2fkmdnUfy5751GdbUduVnN58dWEq_J8IU
 open: null
 close: null
 weight: 0
@@ -32,7 +33,7 @@ settings:
   form_exception_message: ''
   form_open_message: ''
   form_close_message: ''
-  form_previous_submissions: true
+  form_previous_submissions: false
   form_confidential: false
   form_confidential_message: ''
   form_disable_remote_addr: false
@@ -81,7 +82,7 @@ settings:
   autofill: false
   autofill_message: ''
   autofill_excluded_elements: {  }
-  wizard_progress_bar: true
+  wizard_progress_bar: false
   wizard_progress_pages: false
   wizard_progress_percentage: false
   wizard_progress_link: false
@@ -119,7 +120,7 @@ settings:
   confirmation_message: 'Your submission has been sent. Thank you!'
   confirmation_url: ''
   confirmation_attributes: {  }
-  confirmation_back: true
+  confirmation_back: false
   confirmation_back_label: ''
   confirmation_back_attributes: {  }
   confirmation_exclude_query: false
@@ -132,7 +133,7 @@ settings:
   limit_user: null
   limit_user_interval: null
   limit_user_message: ''
-  limit_user_unique: false
+  limit_user_unique: true
   entity_limit_total: null
   entity_limit_total_interval: null
   entity_limit_user: null
@@ -170,7 +171,8 @@ access:
     users: {  }
     permissions: {  }
   view_own:
-    roles: {  }
+    roles:
+      - authenticated
     users: {  }
     permissions: {  }
   update_own:
@@ -230,9 +232,105 @@ handlers:
             id: update_task_assignment
             label: 'Update Task assignment'
             notes: ''
-            handler_id: update_task_assignment
+            handler_id: null
             status: true
             conditions: {  }
-            weight: 0
-            settings: {  }
+            weight: null
+            settings:
+              id: update_task_assignment
+              label: 'Update Task assignment'
+              notes: ''
+              handler_id: null
+              status: true
+              conditions: {  }
+              weight: null
+              settings:
+                id: update_task_assignment
+                label: 'Update Task assignment'
+                notes: ''
+                handler_id: null
+                status: true
+                conditions: {  }
+                weight: null
+                settings:
+                  id: update_task_assignment
+                  label: 'Update Task assignment'
+                  notes: ''
+                  handler_id: null
+                  status: true
+                  conditions: {  }
+                  weight: -50
+                  settings:
+                    id: update_task_assignment
+                    label: 'Update Task assignment'
+                    notes: ''
+                    handler_id: null
+                    status: true
+                    conditions: {  }
+                    weight: null
+                    settings:
+                      id: update_task_assignment
+                      label: 'Update Task assignment'
+                      notes: ''
+                      handler_id: null
+                      status: true
+                      conditions: {  }
+                      weight: null
+                      settings:
+                        id: update_task_assignment
+                        label: 'Update Task assignment'
+                        notes: ''
+                        handler_id: null
+                        status: true
+                        conditions: {  }
+                        weight: null
+                        settings:
+                          id: update_task_assignment
+                          label: 'Update Task assignment'
+                          notes: ''
+                          handler_id: null
+                          status: 1
+                          conditions: {  }
+                          weight: ''
+                          settings:
+                            id: update_task_assignment
+                            label: 'Update Task assignment'
+                            notes: ''
+                            handler_id: null
+                            status: true
+                            conditions: {  }
+                            weight: null
+                            settings:
+                              id: update_task_assignment
+                              label: 'Update Task assignment'
+                              notes: ''
+                              handler_id: null
+                              status: true
+                              conditions: {  }
+                              weight: null
+                              settings:
+                                id: update_task_assignment
+                                label: 'Update Task assignment'
+                                notes: ''
+                                handler_id: null
+                                status: true
+                                conditions: {  }
+                                weight: null
+                                settings:
+                                  id: update_task_assignment
+                                  label: 'Update Task assignment'
+                                  notes: ''
+                                  handler_id: null
+                                  status: true
+                                  conditions: {  }
+                                  weight: null
+                                  settings:
+                                    id: update_task_assignment
+                                    label: 'Update Task assignment'
+                                    notes: ''
+                                    handler_id: update_task_assignment
+                                    status: true
+                                    conditions: {  }
+                                    weight: 0
+                                    settings: {  }
 variants: {  }
