--- a/config/install/core.entity_form_display.node.task.default.yml
+++ b/config/install/core.entity_form_display.node.task.default.yml
@@ -8,12 +8,11 @@ dependencies:
     - node.type.task
   module:
     - field_group
-    - social_group
     - text
     - webform
 third_party_settings:
   field_group:
-    group_basi:
+    group_basic_info:
       children:
         - title
         - body
@@ -49,7 +48,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 2
+    weight: 4
     region: content
     settings:
       rows: 9
@@ -59,12 +58,12 @@ content:
     third_party_settings: {  }
   field_content_visibility:
     type: options_buttons
-    weight: 6
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
   field_webform:
-    weight: 3
+    weight: 5
     settings:
       default_data: true
       webforms: {  }
@@ -72,14 +71,14 @@ content:
     type: webform_entity_reference_select
     region: content
   groups:
-    type: social_group_selector_widget
+    type: options_select
     settings: {  }
-    weight: 5
+    weight: 6
     region: content
     third_party_settings: {  }
   title:
     type: string_textfield
-    weight: 1
+    weight: 3
     region: content
     settings:
       size: 60
@@ -89,8 +88,8 @@ hidden:
   created: true
   path: true
   promote: true
-  social_tagging: true
   status: true
   sticky: true
   uid: true
   url_redirects: true
+
