--- a/config/install/field.field.node.task.field_webform.yml
+++ b/config/install/field.field.node.task.field_webform.yml
@@ -4,7 +4,6 @@ dependencies:
   config:
     - field.storage.node.field_webform
     - node.type.task
-    - webform.webform.default
   module:
     - webform
 id: node.task.field_webform
@@ -15,13 +14,7 @@ label: Webform
 description: ''
 required: false
 translatable: true
-default_value:
-  -
-    default_data: ''
-    status: open
-    open: ''
-    close: ''
-    target_uuid: cc72934e-3d03-4c08-b6dc-9c83e3587510
+default_value: {  }
 default_value_callback: ''
 settings:
   handler: 'default:webform'
