--- a/config/install/core.entity_form_display.task_assignment.task_assignment.default.yml
+++ b/config/install/core.entity_form_display.task_assignment.task_assignment.default.yml
@@ -11,8 +11,6 @@ dependencies:
     - field.field.task_assignment.task_assignment.field_upload
     - field.field.task_assignment.task_assignment.field_webform_submissions
   module:
-    - datetime
-    - social_group
     - social_task_assignment
 id: task_assignment.task_assignment.default
 targetEntityType: task_assignment
@@ -29,28 +27,6 @@ content:
       size: 60
       placeholder: ''
     third_party_settings: {  }
-  field_due_date:
-    type: datetime_default
-    weight: 2
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  field_status:
-    type: social_group_selector_widget
-    weight: 3
-    region: content
-    settings: {  }
-    third_party_settings: {  }
-  field_webform_submissions:
-    type: entity_reference_autocomplete
-    weight: 4
-    region: content
-    settings:
-      match_operator: CONTAINS
-      match_limit: 10
-      size: 60
-      placeholder: ''
-    third_party_settings: {  }
   name:
     type: string_textfield
     weight: 0
@@ -60,9 +36,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
 hidden:
+  field_due_date: true
   field_feedback: true
+  field_status: true
   field_submission_date: true
   field_task: true
   field_upload: true
+  field_webform_submissions: true
   langcode: true
   user_id: true
+
