--- a/config/install/core.entity_view_display.task_assignment.task_assignment.default.yml
+++ b/config/install/core.entity_view_display.task_assignment.task_assignment.default.yml
@@ -11,7 +11,6 @@ dependencies:
     - field.field.task_assignment.task_assignment.field_upload
     - field.field.task_assignment.task_assignment.field_webform_submissions
   module:
-    - datetime
     - social_task_assignment
 id: task_assignment.task_assignment.default
 targetEntityType: task_assignment
@@ -26,27 +25,9 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-  field_due_date:
-    type: datetime_default
-    weight: 1
-    region: content
-    label: above
-    settings:
-      format_type: medium
-      timezone_override: ''
-    third_party_settings: {  }
-  field_submission_date:
-    type: datetime_default
-    weight: 2
-    region: content
-    label: above
-    settings:
-      format_type: medium
-      timezone_override: ''
-    third_party_settings: {  }
   field_webform_submissions:
     type: entity_reference_entity_view
-    weight: 3
+    weight: 1
     region: content
     label: above
     settings:
@@ -54,10 +35,13 @@ content:
       link: false
     third_party_settings: {  }
 hidden:
+  field_due_date: true
   field_feedback: true
   field_status: true
+  field_submission_date: true
   field_task: true
   field_upload: true
   name: true
   search_api_excerpt: true
   user_id: true
+
