--- a/social_task_assignment.info.yml
+++ b/social_task_assignment.info.yml
@@ -5,6 +5,5 @@ package: social
 core: 8.x
 core_version_requirement: ^8 || ^9
 dependencies:
-  - webform
-  - webform_views
+  - social_task_assignment_defaults
   - social_group
